--- a/react-java-docker/backend/src/main/resources/application.yml
+++ b/react-java-docker/backend/src/main/resources/application.yml
@@ -14,7 +14,7 @@ aws:
   s3:
     mock: true
     buckets:
-      customer: fs-amigoscode-customer-test
+      customer: fs-amigoscode-customer-test.
 
 management:
   endpoints:
